--- a/Express/static/style.css
+++ b/Express/static/style.css
@@ -1,3 +1,19 @@
 *{
     padding:10px;
+    color: red;
+}
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+input{
+    width: 500px;
+    margin: 5px;
+}
+textarea{
+    width: 600px;
+    height: 200px;
+    margin: 5px;
+    
 }
