--- a/Express/views/index.pug
+++ b/Express/views/index.pug
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>#{title}</title>
     style
-        include ../static/style.css
+         include ../static/style.css
 </head>
+
 <body>
     | #{message}
+
+    <form action="/" method="post" id="contact">
+        <span>
+            <label for="name" style="display:inline;">Name</label>
+            <input type="text" name="Name" id="name">
+        </span>
+        <input type="number" name="age" min="0">
+        <input type="text" name="more">
+        <textarea name="address" id=""></textarea>
+        <button id="btn">submit</button>
+    </form>
+    <span id="spn"> #{msg} </span>
+
 </body>
+
 </html>
